[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scholar-harvest"
version = "0.1.0"
authors = [
  { name="Martin Monperrus" },
]
description = "Collect and notify about new scientific papers"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4",
    "bibtexparser",
    "feedparser",
    "gakomail",
    "google-api-python-client",
    "httplib2",
    "keyring",
    "lxml",
    "numpy",
    "oauth2client",
    "openai",
    "pandas",
    "pinecone",
    "plotly",
    "PyGithub",
    "python-dotenv",
    "python-frontmatter",
    "pytz",
    "PyYAML",
    "requests",
    "scikit-learn",
    "scipy",
    "tqdm",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.scripts]
scholar-harvest = "harvest:main"

[tool.setuptools]
py-modules = [
    "harvest",
    "harvest_lib",
    "config",
    "semanticscholar_lib",
    "dspace_bitstreams",
    "overleaf_lib",
    "ieee",
    "paper_search",
    "category_exploration",
    "check_acl_meta",
    "extract_urls",
    "get_ebsco_metadata",
    "get_embedding_semanticscholar",
    "list_all_titles_from_bibtex",
    "overleaf_lib",
    "related_work",
    "reviewer-search",
    "title_search",
    "url_analysis"
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py", "*-test.py"]
